tests/diagnostics/user_str_type.kal
# str is a built-in type and cannot be redefined.
struct str { x: i64 }
